--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.username=slee4
-spring.datasource.password=slee4
-spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
+spring.datasource.username=XXXX
+spring.datasource.password=XXXX
+spring.datasource.url=jdbc:mysql://localhost:3306/XXXX
 spring.jpa.hibernate.ddl-auto=update
 tokenSecret=jf9i4jgu83nf10
 server.servlet.context-path=/mobile-app-ws
